<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    android:layout_width="match_parent" android:gravity="center" android:layout_height="match_parent">

    <TextView android:text="@string/compasscalibration" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/textView7" android:textSize="20dp" android:textStyle="bold" android:layout_marginBottom="15dp" />
    <TextView android:text="@string/compasscalibrationexplanation" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/textView8" />
    <pl.droidsonroids.gif.GifTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calibratecompass"
    />
    <TextView android:text="@string/compassaccuracy" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/textView9" />
    <TextView android:text="@string/low" android:layout_width="wrap_content" android:textStyle="bold" android:layout_height="wrap_content"
        android:id="@+id/compassaccuracy" android:textColor="#ff0000" />
</LinearLayout>