<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:gravity="center"
          android:text="@string/location"/>

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:gravity="center"
          android:text="@string/setuptext"
          />

        <Button
          android:id="@+id/WhenAdded_Button_UseGPSForLocation"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/yesplease"/>

        <Button
          android:id="@+id/WhenAdded_Button_UseManualForLocation"
          style="@style/Widget.AppCompat.Button.Borderless"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/nothanksmanuelselect"
          android:textSize="11dp"
          />

</LinearLayout>