<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="true"
    android:orientation="vertical">

  <include android:id="@+id/headlineinclude" layout="@layout/headline" />

    <TextView
        android:id="@+id/WhenAdded_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headlineinclude"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/configure_widget_description"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/WhenAdded_PreviewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configure_widget_preview_description"
        android:textAlignment="center"
        android:layout_below="@+id/WhenAdded_Description"

        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/WhenAdded_HereYouCan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/configure_widget_hereyoucan"
        android:textAlignment="center"
        android:layout_below="@+id/WhenAdded_PreviewDescription"
        android:layout_centerHorizontal="true" />

    <include layout="@layout/salahtimesbox"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
    <Button
        android:id="@+id/WhenAddedSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        android:layout_weight="0.5"/>

    <Button
        android:id="@+id/WhenAddedCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/cancel"
        android:layout_weight="0.5"/>
    </LinearLayout>

</RelativeLayout>