<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent" android:minHeight="110dp" android:minWidth="110dp" android:clickable="true"
    android:id="@+id/widgetTwoByTwo">
<LinearLayout    android:layout_width="match_parent" android:layout_weight="0.5"  android:paddingLeft="5dp" android:orientation="vertical" android:layout_height="match_parent">
    <TextView
      android:id="@+id/fajrTV_ThreeByThree"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:gravity="center_vertical"
      android:text="@string/fajr"
      android:textAlignment="center"
      android:textSize="@dimen/textsize"/>
    <TextView
      android:id="@+id/shurukTV_ThreeByThree"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:padding="0dp"
      android:gravity="center_vertical"
      android:text="@string/shuruk"
      android:textAlignment="center"
      android:textSize="@dimen/textsize"/>
    <TextView
      android:id="@+id/dhuhrTV_ThreeByThree"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:padding="0dp"
      android:gravity="center_vertical"
      android:text="@string/dhuhr"
      android:textAlignment="center"
      android:textSize="@dimen/textsize"/>
    <TextView android:textAlignment="center" android:textSize="@dimen/textsize" android:padding="0dp"  android:gravity="center_vertical"
        android:text="@string/asr" android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/asrTV_ThreeByThree"
        android:layout_weight="1" />
    <TextView android:textAlignment="center" android:textSize="@dimen/textsize" android:padding="0dp"  android:gravity="center_vertical"
        android:text="@string/maghrib" android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/maghribTV_ThreeByThree"
        android:layout_weight="1" />
    <TextView android:textAlignment="center" android:textSize="@dimen/textsize"   android:layout_weight="1" android:padding="0dp"  android:gravity="center_vertical"
        android:text="@string/isha" android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/ishaTV_ThreeByThree" />
</LinearLayout>
    <LinearLayout android:layout_width="match_parent"  android:orientation="vertical" android:layout_weight="0.5"  android:layout_height="match_parent">
        <TextView android:textSize="@dimen/textsize" android:textAlignment="center" android:layout_weight="1" android:padding="0dp"  android:text="00:00" android:gravity="center_vertical"
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:id="@+id/fajrTimeTV_ThreeByThree" />
        <TextView android:textSize="@dimen/textsize" android:textAlignment="center" android:layout_weight="1" android:padding="0dp"  android:text="00:00" android:gravity="center_vertical"
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:id="@+id/shurukTimeTV_ThreeByThree" />
        <TextView android:textSize="@dimen/textsize" android:textAlignment="center" android:layout_weight="1" android:padding="0dp"  android:text="00:00" android:gravity="center_vertical"
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:id="@+id/dhuhrTimeTV_ThreeByThree" />
        <TextView android:textSize="@dimen/textsize" android:textAlignment="center" android:layout_weight="1" android:padding="0dp"  android:text="00:00" android:gravity="center_vertical"
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:id="@+id/asrTimeTV_ThreeByThree" />
        <TextView android:textSize="@dimen/textsize" android:textAlignment="center" android:layout_weight="1" android:padding="0dp"  android:text="00:00" android:gravity="center_vertical"
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:id="@+id/maghribTimeTV_ThreeByThree" />
        <TextView android:textSize="@dimen/textsize" android:textAlignment="center" android:layout_weight="1" android:padding="0dp"  android:text="00:00" android:gravity="center_vertical"
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:id="@+id/ishaTimeTV_ThreeByThree" />
    </LinearLayout>
</LinearLayout>